# trafikwatch

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: sample1.yaml
trafikwatch/: __init__.py  __main__.py  config.py  models.py
trafikwatch/snmp/: __init__.py  discover.py  engine.py
trafikwatch/tui/: __init__.py  app.py  detail_panel.tcss  theme.tcss
